...
                    if (state is FormChoiceLoading)
                      const CircularProgressIndicator(color: Colors.blue),

                    if (state is FormChoiceLoded &&
                        state.localData.isNotEmpty) ...[
                      CustomButton(
                        key: const Key("chooseButton_view"),
                        label: "View Information",
                        icon: Icons.list,
                        onPressed: () {
                          context.read<FormChosseBloc>().add(CheckLocalData());
                          Navigator.of(context).push(
                            MaterialPageRoute(
...
                        },
                      ),
                    ],

                    if (state is FormChoiceLoded && state.localData.isEmpty)
                      CustomButton(
                        key: const Key("chooseButton_go"),
                        label: "Go To The Form",
                        icon: Icons.edit_note,
                        onPressed: () {
                          Navigator.of(context).pushNamed("/formPage");
                        },
                      ),
...
