...
              padding: const EdgeInsets.all(16),
              itemCount: data.length,
              itemBuilder: (context, index) {
                final item = data[index];
                final isExpanded = expandedSet.contains(index);

                final firstName = item['firstName'] ?? '';
                final lastName = item['lastName'] ?? '';

                final otherFields = item.entries.where(
                  (entry) =>
                      entry.key != 'firstName' &&
                      entry.key != 'lastName' &&
                      entry.key != 'id' &&
...
