...
      FormLoaded(
        fields: textValues,
        formElements: formElements,
        selectedYear: null,
        selectedMonth: null,
        selectedDay: null,
        religion: null,
        isOptionEnabled: false,
      ),
    );
  }

  void _onUpdateEvent(UpdateEvent event, Emitter<ForumState> emit) {
...
